# rovio-standalone

./: .gitignore  CMakeLists.txt  README.md
include/kindr/common/: assert_macros.hpp  assert_macros_eigen.hpp  common.hpp  gtest_eigen.hpp  source_file_pos.hpp
include/kindr/math/: LinearAlgebra.hpp
include/kindr/phys_quant/: PhysicalQuantities.hpp  PhysicalType.hpp
include/kindr/poses/: HomogeneousTransformation.hpp  Pose.hpp  PoseBase.hpp  PoseDiffBase.hpp  Twist.hpp
include/kindr/quaternions/: Quaternion.hpp  QuaternionBase.hpp
include/kindr/rotations/: AngleAxis.hpp  EulerAnglesXyz.hpp  EulerAnglesXyzDiff.hpp  EulerAnglesZyx.hpp  EulerAnglesZyxDiff.hpp  GlobalAngularVelocity.hpp  LocalAngularVelocity.hpp  Rotation.hpp  RotationBase.hpp  RotationConversion.hpp  RotationDiff.hpp  RotationDiffBase.hpp  RotationMatrix.hpp  RotationMatrixDiff.hpp  RotationQuaternion.hpp  RotationQuaternionDiff.hpp  RotationVector.hpp  gtest_rotations.hpp
include/kindr/vectors/: Vector.hpp  VectorBase.hpp
include/lightweight_filtering/: CoordinateTransform.hpp  FilterBase.hpp  FilterState.hpp  GIFPrediction.hpp  ModelBase.hpp  OutlierDetection.hpp  Prediction.hpp  PropertyHandler.hpp  SigmaPoints.hpp  State.hpp  TestClasses.hpp  Update.hpp  common.hpp
include/rovio/: Camera.hpp  Duration.hpp  FeatureCoordinates.hpp  FeatureDistance.hpp  FeatureManager.hpp  FeatureStatistics.hpp  FilterStates.hpp  ImagePyramid.hpp  ImgUpdate.hpp  ImuPrediction.hpp  MultiCamera.hpp  MultilevelPatch.hpp  MultilevelPatchAlignment.hpp  Patch.hpp  PoseUpdate.hpp  RobocentricFeatureElement.hpp  RovioFilter.hpp  RovioManger.hpp  RovioScene.hpp  Scene.hpp  Time.hpp  ZeroVelocityUpdate.hpp  exceptions.hpp  featureTracker.hpp
include/rovio/CoordinateTransform/: FeatureOutput.hpp  FeatureOutputReadable.hpp  LandmarkOutput.hpp  PixelOutput.hpp  RovioOutput.hpp  YprOutput.hpp
include/rovio/implementation/: Duration.hpp  Time.hpp
src/: Camera.cpp  Duration.cpp  FeatureCoordinates.cpp  FeatureDistance.cpp  Scene.cpp  Time.cpp  feature_tracker_node.cpp  rovio_rosbag_loader.cpp  rovio_run.cpp  rovio_run_kitti.cpp  test_mlp.cpp  test_patch.cpp
tools/kitti_tool/: ImuToCam.m  ImuToCam.m~  readTrackletsMex.mexa64  run_demoVehiclePath.m  saveToRovioFormat.m
